# RapidTuple

./: .gitmodules  .travis.yml  CMakeDefinitions.txt  CMakeLists.txt  README.md
bench/: bench.sh  decl.cpp  get_index.cpp  get_type.cpp
include/: tuple.hpp
include/rapidtuple/: tuple.hpp
modules/brigand/brigand/: brigand.hpp
test/: tuple.cpp
